--- a/about.html
+++ b/about.html
@@ -38,7 +38,8 @@
       </main>
     
       <footer>
-        <p>© 2025 — Designed and built with precision using HTML, CSS, and JavaScript</p>
+        <p>Designed & Built with by Obadua Oluwafunmito</p>
+        <p>© 2025 All rights reserved.</p>
       </footer>
 </body>
 </html>
