--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       </main>
     
       <footer>
-        <p>Designed & Built with by Obadua Oluwafunmito</p>
+        <p>Designed & Built by Obadua Oluwafunmito</p>
         <p>© 2025 All rights reserved.</p>
       </footer>
 </body>
