--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <h2>Let’s Connect</h2>
-      <form action="#" method="POST">
+      <form action="https://formspree.io/f/mblgwwbq" method="POST">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
         <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
