--- a/pages/project.html
+++ b/pages/project.html
@@ -25,9 +25,9 @@
         <a href="[insert live link here]" target="_blank">View Live Website</a>
         <h3>Screenshots:</h3>
         <div class="screenshots">
-          <img src="[insert screenshot 1 URL here]" alt="Ecommerce Website Screenshot 1">
-          <img src="[insert screenshot 2 URL here]" alt="Ecommerce Website Screenshot 2">
-          <img src="[insert screenshot 3 URL here]" alt="Ecommerce Website Screenshot 3">
+          <img src="../images/todo1.png" alt="Ecommerce Website Screenshot 1">
+          <img src="../images/todo2.png" alt="Ecommerce Website Screenshot 2">
+          <img src="../images/todo3 (1).png" alt="Ecommerce Website Screenshot 3">
         </div>
     </div>
     <div class="project">
